Added Ticket to mismatch from LP/MT4

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -146,8 +146,7 @@
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a></li>
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1o-VNxW4aywl5P4QImhZxCS5-Q1-irJhXwaWfND1pNog/edit#gid=0">MT4 Trading Timing ⌚</a></li>
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/19agQW-D4iiewHWLQCeumY4V04-VNLdbyLE0NEDVElEY/edit#gid=0">MT5 Trading Timing ⌚</a></li>
-
-
+                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
 
                 </ul>
               </li>
