Dash Set Up. Kinna..

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -57,7 +57,7 @@
   <!-- Nav Bar -->
   <section id="title">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a href="{{ url_for('index') }}" class="navbar-brand">Risk</a>
+      <a href="{{ url_for('main_app.index') }}" class="navbar-brand">Risk</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler01" aria-controls="navbarToggler01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -81,8 +81,8 @@
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{{ url_for('ABook_Matching') + "?send_email_flag=0" }}">MT4/LP ⭐</a></li>
-              <li><a class="dropdown-item" href="{{ url_for('add_off_set') }}">A Book Offset ➕</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('main_app.ABook_Matching') + "?send_email_flag=0" }}">MT4/LP ⭐</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('main_app.add_off_set') }}">A Book Offset ➕</a></li>
               <div class="dropdown-divider"></div>
 
 
@@ -98,20 +98,20 @@
 
                   <div class="dropdown-divider"></div>
 
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut') }}">Risk Auto Cut [Add Login]] ➕</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Risk_auto_cut') }}">Risk Auto Cut ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut') }}">Risk Auto Cut [Add Login]] ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Include_Risk_Autocut_Group') }}">Risk Auto Cut [Add Group] ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Exclude_Risk_Autocut') }}">Risk Auto Cut Exclude ➕</a></li>
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Equity_protect') }}">Equity Protect ⭐</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.noopentrades_changegroup') }}">Change Group ⭐</br>(No Open Trades)</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Equity_protect') }}">Equity Protect ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Computer_Usage') }}">Server Usage ⭐</a></a></a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Monitor_Risk_Tools') }}">Monitor Risk Tools ⭐</a></li>
 
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('cfh_details') }}">CFH FIX Details ⭐</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Position') }}">CFH Soap Position</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.cfh_details') }}">CFH FIX Details ⭐</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Position') }}">CFH Soap Position</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.CFH_Soap_Symbol') }}">CFH Soap Symbol</a></li>
 
 
                   <div class="dropdown-divider"></div>
@@ -125,7 +125,7 @@
 
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/ReadOnly_Equity_Below_Credit_V1.2/">Equity below Credit ⭐</a></li>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude ➕</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.Exclude_Equity_Below_Credit') }}">Equity below Credit Exclude ➕</a></li>
                   <div class="dropdown-divider"></div>
                   <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Daily_Change_Spread_V1.91/">Daily Change Spread [External]</a></li>
                   <li><a class="dropdown-item bg_a_lighter_green" href="https://202.88.105.6:4433/All/Change_Spread_manual/">HK Spread Change [External]</a></li>
@@ -157,15 +157,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
                   <li><a class="dropdown-item" href="{{ url_for('swaps.BGI_Swaps') }}">BGI Swaps</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('main_app.Changed_readonly') }}">Changed Read Only</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('swaps.Bloomberg_Dividend') }}">Bloomberg Dividend</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('main_app.BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
                 </ul>
               </li>
               <li class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="{{ url_for('Risk_Download_Page') }}">Risk Download Page</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('main_app.Risk_Download_Page') }}">Risk Download Page</a></li>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{{ url_for('Create_User') }}">Create Users</a>
+              <a class="dropdown-item" href="{{ url_for('main_app.Create_User') }}">Create Users</a>
           </li>
         </ul>
         </li>
@@ -289,9 +289,9 @@
         {% endif %}
         <li class="nav-item">
           {% if current_user.is_anonymous %}
-          <a href="{{ url_for('login') }}" class="nav-link">Login</a>
+          <a href="{{ url_for('main_app.login') }}" class="nav-link">Login</a>
           {% else %}
-          <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
+          <a href="{{ url_for('main_app.logout') }}" class="nav-link">Logout</a>
           {% endif %}
 
         </li>
