--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -56,22 +56,71 @@
       <th>Download</th>
     </tr>
     <tr>
-      <td><b>MT4 Live 3 User Details</b></td>
-      <td>Download all Live 3 User Details in Excel File.</td>
-      <td><a href="{{ url_for('Live3_MT4_Users') }}"><input class="btn btn-primary btn-lg" type="button" value="Live 3 User Details"></a></td>
-    </tr>
-    <tr>
       <td><b>MT4 Live 1 User Details</b></td>
       <td>Download all Live 1 User Details in Excel File.</td>
-      <td><a href="{{ url_for('Live1_MT4_Users') }}"><input class="btn btn-primary btn-lg" type="button" value="Live 1 User Details"></a></td>
+      <td><a href="{{ url_for('main_app.Live1_MT4_Users') }}"><input class="btn btn-primary btn-lg btn-block" type="button" value="Live 1 User Details"></a></td>
     </tr>
     <tr>
-      <td><b>MT5 BGI Client Terminal</b></td>
-      <td>Download MT5 Client Terminal.</td>
-      <td><a href="https://download.mql5.com/cdn/web/blackwell.global.investments/mt5/blackwellglobal5setup.exe"><input class="btn btn-primary btn-lg" type="button" value="MT5 Terminal"></a></td>
+      <td><b>MT4 Live 2 User Details</b></td>
+      <td>Download all Live 2 User Details in Excel File.</td>
+      <td><a href="{{ url_for('main_app.Live2_MT4_Users') }}"><input class="btn btn-primary btn-lg btn-block" type="button" value="Live 2 User Details"></a></td>
+    </tr>
+    <tr>
+      <td><b>MT4 Live 3 User Details</b></td>
+      <td>Download all Live 3 User Details in Excel File.</td>
+      <td><a href="{{ url_for('main_app.Live3_MT4_Users') }}"><input class="btn btn-primary btn-lg btn-block" type="button" value="Live 3 User Details"></a></td>
+    </tr>
+    <tr>
+      <td><b>MT4 Live 5 User Details</b></td>
+      <td>Download all Live 5 User Details in Excel File.</td>
+      <td><a href="{{ url_for('main_app.Live5_MT4_Users') }}"><input class="btn btn-primary btn-lg btn-block" type="button" value="Live 5 User Details"></a></td>
     </tr>
   </table>
 
+
+
+
+  <table class="table basic_table">
+    <tr>
+      <th>Description</th>
+      <th>Comment</th>
+      <th>Download</th>
+    </tr>
+
+    <tr>
+      <td><b>MT4 BGI Terminal</b></td>
+      <td>MT4 BGI Client Terminal.</td>
+      <td><a href="https://download.mql5.com/cdn/web/blackwell.global.investments/mt4/blackwellglobal4setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MT4 BGI Terminal"></a></td>
+    </tr>
+
+    <tr>
+      <td><b>MT5 BGI Client Terminal</b></td>
+      <td>MT5 BGI Client Terminal.</td>
+      <td><a href="https://download.mql5.com/cdn/web/blackwell.global.investments/mt5/blackwellglobal5setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MT5 Terminal"></a></td>
+    </tr>
+
+
+    <tr>
+      <td><b>MAM MT4 Admin</b></td>
+      <td>MT4 MAM Admi.</td>
+      <td><a href="https://www.metafx-int.com/products/mamadmin/v2/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 Admin"></a></td>
+    </tr>
+    <tr>
+      <td><b>MAM MT4 .dll</b></td>
+      <td>MAM MT4 .dll for MT4 plugin</td>
+      <td><a href="https://www.metafx-int.com/products/mam_srv/MAM.dll"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 .dll"></a></td>
+    </tr>
+    <tr>
+      <td><b>MAM MT4 Manager</b></td>
+      <td>MAM MT4 Manager.</td>
+      <td><a href="https://www.metafx-int.com/products/mam_v4/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 Manager"></a></td>
+    </tr>
+    <tr>
+      <td><b>MAM MT5 Admin</b></td>
+      <td>MAM MT5 Admin.</td>
+      <td><a href="https://www.metafx-int.com/products/mam5/admin/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Admin"></a></td>
+    </tr>
+  </table>
 </div>
 
 {% endblock %}
