--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -121,7 +121,7 @@
       <td><a href="https://www.metafx-int.com/products/mam5/admin/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Admin"></a></td>
     </tr>
     <tr>
-      <td><b>MAM MT5 Admin[Keysoft]]</b></td>
+      <td><b>MAM MT5 Admin[Keysoft]</b></td>
       <td>MAM MT5 Admin.</td>
       <td><a href="https://keysoftstore.blob.core.windows.net/mam5-administrator/MAM5AdminSetup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Admin"></a></td>
     </tr>
