Writing Country Float

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -142,7 +142,8 @@
                   Analytics
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                  <li><a class="dropdown-item" href="{{ url_for('analysis.cn_index') }}">CN PnL 💪</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 💪</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('analysis.save_BGI_float') }}">Save Floating ⭐</a></li>
                 </ul>
               </li>
 
@@ -185,8 +186,8 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="http://192.168.20.117:81/www/main.html">Main</a>
             <a class="dropdown-item" href="http://192.168.64.73/www/PNL/index.php">Total PnL</a>
-            <a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_1/by_country/tableFLOATshowing2.html">Country Float</a>
-            <a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_1/by_symbol/tableFLOATsymbol0.html">Symbol Float</a>
+            <a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_country/tableFLOATshowing2.html">Country Float</a>
+            <a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_symbol/tableFLOATsymbol0.html">Symbol Float</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="http://192.168.64.73/www/PNL/index_signal_CN.php">Signal:CN
               Daily</a>
