--- a/Risk_Aaron/app/templates/Webworker_Country_Float.html
+++ b/Risk_Aaron/app/templates/Webworker_Country_Float.html
@@ -13,6 +13,9 @@
 
 {% block scripts %}
 {{ super() }}
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+
 <script src="{{ url_for('static', filename='js/sweetalert2.all.min.js') }}"></script>
 
 <script type="javascript/worker" id="my_first_worker">
@@ -166,8 +169,13 @@
       Increment_counter = 1;  // Restart the Counter.
 
       // Post to main thread to update the DOM
-      self.postMessage({Table1: Draw_Table(responseData, "{{ Table_name }}" , "table table-hover table-sm table-responsive-sm basic_table bg-light", ["Update Slow"] , {{ replace_words }} ) + '<span class="right-text small-text bg-light p-3 m-2">' + return_Time_String() + "</span>"});
+      self.postMessage({Table1: Draw_Table(responseData[0], "{{ Table_name }}" , "table table-hover table-sm table-responsive-sm basic_table bg-light", ["Update Slow"] , {{ replace_words }} ) + '<span class="right-text small-text bg-light p-3 m-2">' + return_Time_String() + "</span>"});
       self.postMessage({Table1_Raw : JSON.stringify(responseData)});
+      self.postMessage({plot1 : responseData[1]});
+
+
+
+
 
 
     }).catch(err => {
@@ -276,6 +284,8 @@
                 var string_buffer = "";
                 string_buffer += table_Data[x][xx];
 
+
+
                 var Alert_Word_found = 0;
                 for (var aw in Alert_Words) {	// Loop thru the list of alert words
                     // Loop thru the array
@@ -322,7 +332,15 @@
                     //sString += "Is Array..." ;
 
                     sString += Draw_Vertical_Table(table_Data[x][xx], "", "table_orange ", Replace_words);
-                } else {
+                } else  if (typeof(table_Data[x][xx]) === 'number'){  // If it's a number. we want to write it with a comma for easy reading.
+
+                  if (table_Data[x][xx] < 0){
+                    sString += "<font color='red'>" +  numberWithCommas(table_Data[x][xx]) + "</font>";
+                  }else{
+                    sString += numberWithCommas(table_Data[x][xx]);
+                  }
+                }else
+                {
 
                     sString += string_buffer;
                 }
@@ -335,6 +353,10 @@
         return sString;
       }
 
+
+    function numberWithCommas(x) {
+      return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
+    }
 
     function Check_Time_Offset(){
         var d = new Date();
@@ -447,7 +469,15 @@
                 //$('#' + error_card_id ).html(current_html);  // Put it back into the Card.
              }
              //console.log(`${key} : ${e.data[key]}`);
-            $('#' + key).html(current_html + ret_obj[key]);
+
+            if (key.search("plot") == -1){  // If there's no need to plot.
+              $('#' + key).html(current_html + ret_obj[key]);
+            }else{
+              console.log(ret_obj[key]);
+              Plotly.newPlot(key, ret_obj[key]);
+            }
+
+
           }
             //}
           //}
@@ -507,6 +537,11 @@
 </div>
 
 {% endif %}
+
+<div class="row">
+  <div class="col-sm chart" id="plot1"> </div>
+</div>
+
 
 
 {% if table %}
