--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -145,7 +145,7 @@
                   Analytics
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                  <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Symbol Floating 🎶 </a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">Symbol Floating 🎶 </a></li>
                   <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 🌎</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('analysis.save_BGI_float') }}">Save Floating 💾</a></li>
                 </ul>
