--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -126,6 +126,15 @@
       <td><a href="https://keysoftstore.blob.core.windows.net/mam5-administrator/MAM5AdminSetup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Admin"></a></td>
     </tr>
     <tr>
+      <td><b>MAM MT5 Admin[Full Installer]</b></td>
+      <td>MAM MT5 admin [Full Installer]</td>
+      <td><a href="https://keysoftstore.blob.core.windows.net/mam5-administrator/MAM5AdminSetup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Admin"></a></td>
+    </tr>
+
+
+
+
+    <tr>
       <td><b>MAM MT5 Server Plugin</b></td>
       <td>MAM MT5 Server Plugin.</td>
       <td><a href="https://keysoftstore.blob.core.windows.net/mam5-plugin/MAM5.dll"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT5 Server Plugin"></a></td>
