--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -148,6 +148,7 @@
                   <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">Symbol Floating 🎶 </a></li>
                   <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Country_Float') }}">Country Floating 🌎</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('analysis.save_BGI_float') }}">Save Floating 💾</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session_ajax') }}">Clear Site Cookies</a></li>
                 </ul>
               </li>
 
@@ -160,6 +161,11 @@
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1o-VNxW4aywl5P4QImhZxCS5-Q1-irJhXwaWfND1pNog/edit#gid=0">MT4 Trading Timing ⌚</a></li>
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/19agQW-D4iiewHWLQCeumY4V04-VNLdbyLE0NEDVElEY/edit#gid=0">MT5 Trading Timing ⌚</a></li>
                   <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
+                  <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Risk Demo Login 🔑</a></li>
+
+
+
+
 
                 </ul>
               </li>
