--- a/Risk_Aaron/app/templates/Risk_Download_Page.html
+++ b/Risk_Aaron/app/templates/Risk_Download_Page.html
@@ -101,10 +101,24 @@
 
 
     <tr>
+      <td><b>MT4 Manager</b></td>
+      <td>MT4 Manager.</td>
+      <td><a href="https://support.metaquotes.net/spfiles/metatrader4/mt4manager.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MT4 Manager"></a></td>
+    </tr>
+
+
+    <tr>
       <td><b>MAM MT4 Admin</b></td>
-      <td>MT4 MAM Admi.</td>
+      <td>MAM MT4 Admin</td>
       <td><a href="https://www.metafx-int.com/products/mamadmin/v2/setup.exe"><input class="btn btn-primary btn-lg btn-block" type="button" value="MAM MT4 Admin"></a></td>
     </tr>
+
+
+
+
+
+
+
     <tr>
       <td><b>MAM MT4 .dll</b></td>
       <td>MAM MT4 .dll for MT4 plugin</td>
