USOil Ticks Real

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -118,7 +118,7 @@
 
 
                   <div class="dropdown-divider"></div>
-                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Ticks (5)</a></li>
+                  <li><a class="dropdown-item bg_a_light_green" href="{{ url_for('main_app.USOil_Ticks') }}">USOil Alert 🛢</a></li>
 
                   <div class="dropdown-divider"></div>
 
