--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -189,6 +189,8 @@
                   <li><a class="dropdown-item" href="{{ url_for('main_app.Changed_readonly') }}">Changed Read Only</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('swaps.Bloomberg_Dividend') }}">Bloomberg Dividend</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('main_app.BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('swaps.cfh_oz_upload') }}">CFH OZ Upload</a></li>
+
 
 
 
@@ -306,6 +308,8 @@
 
               </ul>
             </li>
+            <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
+
 
             <li class="nav-item dropdown">
             <li><a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a></li>
