UpdatedA Book Mismatch Page.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -317,6 +317,8 @@
             <li><a class="dropdown-item" href="https://global.markets.com/holiday-schedule/">Global Markets Trading Holiday</a></li>
             <li><a class="dropdown-item" href="https://tw.rter.info/bank/BKTWTWTP/">USDTWD Web Scrape</a></li>
             <li><a class="dropdown-item" href="https://www.capitalfutures.com.tw/product/deposit.asp?xy=2&xt=2">Futures contract sizes</a></li>
+            <li><a class="dropdown-item" href="https://community.ig.com/blogs">IG Community Blog</a></li>
+
 
 
 
